# sycl-workshop

./: .buildinfo  .gitignore  LICENSE.code  README.md  flake.nix  index.html  objects.inv  requirements.txt  searchindex.js
.github/workflows/: sphinx.yml
_sources/: buffer-accessor-vs-usm.rst.txt  buffers-accessors.rst.txt  device-discovery.rst.txt  expressing-parallelism-nd-range.rst.txt  guide.rst.txt  heat-equation.rst.txt  index.rst.txt  profiling.rst.txt  queues-cgs-kernels.rst.txt  quick-reference.rst.txt  sub-groups.rst.txt  what-is-sycl.rst.txt
buffer-accessor-vs-usm/: index.html
buffers-accessors/: index.html
content/: bibliography.bib  buffer-accessor-vs-usm.rst  buffers-accessors.rst  conf.py  data-and-dependencies.rst  device-discovery.rst  expressing-parallelism-basic.rst  expressing-parallelism-nd-range.rst  expressing-parallelism.rst  guide.rst  heat-equation.rst  index.rst  karolina.rst  profiling.rst  queues-cgs-kernels.rst  quick-reference.rst  setup.rst  sub-groups.rst  sycl_impls+backends.drawio  task-graphs-synchronization.rst  unified-shared-memory.rst  what-is-sycl.rst
content/code/: .clang-format  .gitignore  karolina-submit.sh
content/code/00_sycl-vadd/: sycl_vadd.cpp
content/code/01_hello-sycl/: CMakeLists.txt  hello.cpp
content/code/day-1/00_hello/: hello.cpp
content/code/day-1/01_axpy-buf_acc/: CMakeLists.txt
content/code/day-1/01_axpy-buf_acc/solution/: axpy.cpp
content/code/day-1/01_axpy-usm/: axpy.cpp
content/code/day-1/01_hello-selectors/: hello.cpp
content/code/day-1/01_saxpy/: saxpy.cpp
content/code/day-1/01_saxpy-buf_acc/: CMakeLists.txt
content/code/day-1/01_saxpy-usm/: saxpy.cpp
content/code/day-1/02_custom-selector/: CMakeLists.txt  custom-selector.cpp
content/code/day-1/02_hello-selectors/: hello.cpp
content/code/day-1/02_hello-selectors/solution/: CMakeLists.txt  hello.cpp
content/code/day-1/03_custom-selector/solution/: CMakeLists.txt  custom-selector.cpp
content/code/day-1/03_platform-devices/: platform-devices.cpp
content/code/day-1/03_platform-devices/solution/: CMakeLists.txt  platform-devices.cpp
content/code/day-1/04_axpy-buf_acc/: axpy.cpp
content/code/day-1/04_axpy-buf_acc/solution/: axpy.cpp
content/code/day-1/04_platform-devices/solution/: platform-devices.cpp
content/code/day-1/04_single-task/solution/: CMakeLists.txt  single-task.cpp
content/code/day-1/05_axpy-buf_acc/: axpy.cpp
content/code/day-1/05_axpy-buf_acc/solution/: axpy.cpp
content/code/day-1/05_axpy-usm/: axpy.cpp
content/code/day-1/05_axpy-usm/solution/: axpy.cpp
content/code/day-1/06_axpy-usm/solution/: axpy.cpp
content/code/day-1/06_axpy-usm_allocator/: axpy.cpp
content/code/day-1/06_axpy-usm_allocator/solution/: axpy.cpp
content/code/day-1/07_axpy-usm_allocator/: axpy.cpp
content/code/day-1/07_axpy-usm_allocator/solution/: CMakeLists.txt  axpy.cpp
content/code/day-1/single-task/: single-task.cpp
content/code/day-1/single-task/solution/: single-task.cpp
content/code/day-2/00_range-matmul/: range-matmul.cpp
content/code/day-2/00_range-matmul/solution/: range-matmul.cpp
content/code/day-2/00_serial-heat-equation/: CMakeLists.txt  core.cpp  heat.h  io.cpp  main.cpp  pngwriter.c  pngwriter.h  setup.cpp  utilities.cpp
content/code/day-2/01_usm-range-matmul/: usm-range-matmul.cpp
content/code/day-2/01_usm-range-matmul/solution/: CMakeLists.txt  usm-range-matmul.cpp
content/code/day-2/02_nd_range-matmul/: nd_range-matmul.cpp
content/code/day-2/02_nd_range-matmul/solution/: nd_range-matmul.cpp
content/code/day-2/03_usm-nd_range-matmul/: usm-nd_range-matmul.cpp
content/code/day-2/03_usm-nd_range-matmul/solution/: usm-nd_range-matmul.cpp
content/code/day-2/04_tiled-matmul/: tiled-matmul.cpp
content/code/day-2/04_tiled-matmul/solution/: CMakeLists.txt  tiled-matmul.cpp
content/code/day-2/05_serial-heat-equation/: main.cpp
content/code/day-2/05_sub_group-matmul/solution/: sub_group-matmul.cpp
content/code/day-2/06_serial-heat-equation/: CMakeLists.txt  core.cpp  heat.h  io.cpp  main.cpp  pngwriter.c  pngwriter.h
content/code/day-2/06_sycl-heat-equation/: core.cpp  pngwriter.h
content/code/day-2/07_sycl-heat-equation/: core.cpp  heat.h  io.cpp  main.cpp  pngwriter.h  setup.cpp  utilities.cpp
content/code/day-2/08_sycl-events-profiling/: core.cpp  heat.h  main.cpp  pngwriter.c  utilities.cpp
content/code/day-2/naive-matmul-nd_range/solution/: CMakeLists.txt  naive-matmul-nd_range.cpp
content/code/day-2/naive-matmul-range/solution/: CMakeLists.txt  naive-matmul-range.cpp
content/code/day-2/nd_range-matmul/: nd_range-matmul.cpp
content/code/day-2/nd_range-matmul/solution/: CMakeLists.txt
content/code/day-2/range-matmul/solution/: CMakeLists.txt
content/code/day-2/sub_group-matmul/solution/: CMakeLists.txt  (+1 more)
content/code/day-2/usm-nd_range-matmul/solution/: CMakeLists.txt  usm-nd_range-matmul.cpp
content/code/day-3/00_sub_group-matmul/: sub_group-matmul.cpp
content/code/day-3/01_sycl-events-profiling/: CMakeLists.txt
content/code/day-3/02_sycl-heat-equation-opt/: core.cpp  heat.h  io.cpp  main.cpp  utilities.cpp
content/code/snippets/: inherit-device_selector.cpp  kernel_with_id.cpp  kernel_with_item.cpp  saxpy.acc.c  saxpy.cu  saxpy.hip.cpp  saxpy.omp.cpp  y-pattern-accessors.cpp  y-pattern-events.cpp  y-pattern-in-order.cpp
content/diagrams/: 2d_range.drawio  Untitled Diagram.drawio  data-management-strategy.drawio  graphs.drawio  matrix_multiply.drawio  nd_range.drawio  stencil-fixed-boundaries.drawio  stencil.drawio  sycl_impls+backends.drawio
device-discovery/: index.html
expressing-parallelism-basic/: index.html
expressing-parallelism-nd-range/: index.html
genindex/: index.html
guide/: index.html
heat-equation/: index.html
karolina/: index.html
profiling/: index.html
queues-cgs-kernels/: index.html
quick-reference/: index.html
search/: index.html
sub-groups/: index.html
task-graphs-synchronization/: index.html
unified-shared-memory/: index.html
vega/: index.html
what-is-sycl/: index.html
zbibliography/: index.html
(+2 files in other folders)
